# nda-review-cli

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  generate_redline_instructions.py  hybrid_review.sh  nda_review_cli.py  pyproject.toml  review_nda.sh  rule_engine.py  run_all.sh  step2_pass2_review.py  step3_redline_pack.sh  step4_prepare_tracked_redline.sh  step5_find_replace_pack.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: default-policy.json  integrations.json.example  llm.json.example  scoring-profiles.json
deploy/: Dockerfile  README.md  fly.toml  railway.json  render.yaml
docs/reference/: README.md  exit-codes.md  fatigue.md  llm-data-flow.md  policy.md  scoring.md  stance.md  state-file.md
docs/setup/: README.md  integrations.md  llm-anthropic.md  llm-ollama.md  llm-openai-compatible.md  llm-openai.md
examples/: demo.md  negotiate-cheatsheet.md
scripts/: record-demo.sh
templates/: common_paper_mutual_nda.md  mutual_nda.md  one_way_out_nda.md
tests/: test_doctor_llm.py  test_draft.py  test_llm_config_lookup.py  test_llm_review.py  test_manifest_cli.py  test_negotiate.py  test_negotiate_polish.py  test_negotiate_simulate.py  test_onboarding_e2e_smoke.py  test_onboarding_ingest.py  test_quickstart.py  test_review_explainability.py  test_review_golden.py  test_rule_engine.py  test_sample_nda.py  test_wizard_flow.py
tests/fixtures/: expected_review_golden.json  sample_nda.txt  scoring_validation_set.json
web/: README.md  server.py
web/static/: app.js  index.html  style.css
